--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -16,6 +16,10 @@
   </div>
   <button id="exportQuotes">Export Quotes</button>
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- Dynamically populated categories -->
+  </select>
   <script src="script.js"></script>
 </body>
 </html>
